--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   min-height: 100vh;
   font-family: 'Comic Neue', cursive, Arial, sans-serif;
   background: #a0d8f7;
-  background-image: url('https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg');
+  background-image: url('fundo.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
