--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           "Apenas para adultos",
           "Um jogo"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Qual destes é um direito humano?",
@@ -410,7 +410,7 @@
           "Ter brinquedos caros",
           "Não ir à escola"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "Quem deve respeitar os direitos humanos?",
@@ -420,7 +420,7 @@
           "Só os pais",
           "Só os adultos"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Por que respeitar as diferenças é importante?",
@@ -430,7 +430,7 @@
           "Porque é chato",
           "Para ganhar prêmios"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que podemos fazer para ajudar os outros?",
@@ -440,7 +440,7 @@
           "Brigar",
           "Ficar sozinho"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Todas as crianças têm direito a:",
@@ -450,7 +450,7 @@
           "Ficar sem brincar",
           "Decidir tudo sozinhas"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que é bullying?",
@@ -460,7 +460,7 @@
           "Ajudar um amigo",
           "Fazer brincadeiras sem maldade"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Se alguém está triste, o que devemos fazer?",
@@ -470,7 +470,7 @@
           "Fazer piadas",
           "Falar para se afastar"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "Onde podemos aprender sobre direitos humanos?",
@@ -480,7 +480,7 @@
           "Só com os amigos",
           "Não precisamos aprender"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que devemos fazer quando alguém precisa de ajuda?",
@@ -490,7 +490,7 @@
           "Fingir que não viu",
           "Chamar atenção da pessoa"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "Qual destes é um direito da criança?",
@@ -500,7 +500,7 @@
           "Ficar sem estudar",
           "Fazer tudo o que quiser"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Como devemos tratar pessoas com deficiência?",
@@ -510,7 +510,7 @@
           "Ignorando suas dificuldades",
           "Fazendo tudo por elas"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que é preconceito?",
@@ -520,7 +520,7 @@
           "Um tipo de brincadeira",
           "Algo que não existe mais"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Por que é importante ir à escola?",
@@ -530,7 +530,7 @@
           "Para ficar longe de casa",
           "Só porque é obrigatório"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que fazer se vir alguém sendo discriminado?",
@@ -540,7 +540,7 @@
           "Tirar fotos para postar",
           "Achar engraçado"
         ],
-        resposta: 2
+        resposta: 1
       }
     ],
     medio: [
@@ -552,7 +552,7 @@
           "Para os adultos mandarem",
           "Para punir crianças"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Qual destes NÃO é um direito humano?",
@@ -562,7 +562,7 @@
           "Ter opinião própria",
           "Ter acesso à saúde"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que significa igualdade?",
@@ -572,7 +572,7 @@
           "Só algumas pessoas terem direitos",
           "Cada um cuidar só de si"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Como resolver conflitos pacificamente?",
@@ -582,7 +582,7 @@
           "Fazendo votação",
           "Pedindo para adultos decidirem"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "Quem criou a Declaração dos Direitos Humanos?",
@@ -592,7 +592,7 @@
           "Os presidentes do mundo",
           "Os países mais ricos"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Direito à educação inclui:",
@@ -602,7 +602,7 @@
           "Só quem tem boas notas",
           "Só nas cidades grandes"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "Quando os direitos humanos começam?",
@@ -612,7 +612,7 @@
           "Quando entramos na escola",
           "Só para quem tem documento"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que é discriminação?",
@@ -622,7 +622,7 @@
           "Não gostar de um alimento",
           "Ter um amigo preferido"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "Por que existem direitos especiais para crianças?",
@@ -632,7 +632,7 @@
           "Porque os adultos decidiram",
           "Porque não sabem de nada"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Como promover direitos humanos na escola?",
@@ -642,7 +642,7 @@
           "Falando só com quem pensa igual",
           "Impondo minhas ideias"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que é liberdade de expressão?",
@@ -652,7 +652,7 @@
           "Gritar mais alto que os outros",
           "Falar mal dos professores"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Qual a importância da família?",
@@ -662,7 +662,7 @@
           "Controlar todas as decisões",
           "Só para pagar as contas"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que é trabalho infantil?",
@@ -672,7 +672,7 @@
           "Fazer tarefas escolares",
           "Arrumar o próprio quarto"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Por que é errado discriminar por cor da pele?",
@@ -682,7 +682,7 @@
           "Porque é moda dizer isso",
           "Porque os professores mandam"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que é cidadania?",
@@ -692,7 +692,7 @@
           "Morar em cidade grande",
           "Ser maior de idade"
         ],
-        resposta: 2
+        resposta: 1
       }
     ],
     dificil: [
@@ -704,7 +704,7 @@
           "Ser famoso",
           "Ter muitos bens"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Qual órgão protege direitos humanos no Brasil?",
@@ -714,7 +714,7 @@
           "As escolas",
           "Os hospitais"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Quando foi criada a Declaração dos Direitos Humanos?",
@@ -724,7 +724,7 @@
           "2000 no novo milênio",
           "1776 com a independência dos EUA"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que é racismo estrutural?",
@@ -734,7 +734,7 @@
           "Preferência por uma cor",
           "Algo que não existe mais"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Direitos humanos são:",
@@ -744,7 +744,7 @@
           "Privilégios",
           "Leis opcionais"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que significa defender direitos humanos?",
@@ -754,7 +754,7 @@
           "Ser contra a polícia",
           "Apoiar criminosos"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que é justiça social?",
@@ -764,7 +764,7 @@
           "Todos ganharem o mesmo",
           "O governo decidir tudo"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Por que a liberdade religiosa é importante?",
@@ -774,7 +774,7 @@
           "Ter uma religião oficial",
           "Obedecer aos líderes religiosos"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que é um direito fundamental?",
@@ -784,7 +784,7 @@
           "Um privilégio",
           "Algo que podemos viver sem"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Qual o papel do Estado nos direitos humanos?",
@@ -794,7 +794,7 @@
           "Controlar tudo",
           "Só cobrar impostos"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que é violação de direitos humanos?",
@@ -804,7 +804,7 @@
           "Algo que só governos fazem",
           "Coisa do passado"
         ],
-        resposta: 1
+        resposta: 0
       },
       {
         pergunta: "O que é democracia?",
@@ -814,7 +814,7 @@
           "Ditadura disfarçada",
           "Só eleições a cada 4 anos"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que é acesso à justiça?",
@@ -824,7 +824,7 @@
           "Processos judiciais complicados",
           "Algo desnecessário"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "Por que direitos humanos incluem saúde?",
@@ -834,7 +834,7 @@
           "Só para quem trabalha",
           "Porque hospitais precisam de pacientes"
         ],
-        resposta: 2
+        resposta: 1
       },
       {
         pergunta: "O que é sustentabilidade nos direitos humanos?",
@@ -844,7 +844,7 @@
           "Economizar dinheiro",
           "Moda ecológica"
         ],
-        resposta: 1
+        resposta: 0
       }
     ]
   };
@@ -1035,6 +1035,9 @@
     // Desabilitar todos os botões
     botoes.forEach(btn => btn.disabled = true);
 
+    // Encontrar o botão correto
+    const botaoCorreto = answersContainer.querySelector('[data-correct="true"]');
+
     if (respostaEscolhida === p.resposta) {
       event.currentTarget.classList.add('correct');
       feedbackText.textContent = "Você acertou! 🎉";
@@ -1042,8 +1045,8 @@
       somAcerto.play();
     } else {
       event.currentTarget.classList.add('wrong');
-      feedbackText.textContent = `Ops, a resposta correta era: "${p.opcoes[p.resposta]}"`;
-      botoes[p.resposta].classList.add('correct');
+      // Mostrar apenas o botão correto em verde
+      botaoCorreto.classList.add('correct');
       somErro.play();
     }
 
